[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodrz"
description = "Speaker Diarisation with Transformers"
version = "0.0.1"
dependencies = [
    "click",
    "descript-audio-codec",
    "einop",
    "memory_efficient_attention_pytorch",
    "textgrid",
    "torch",
    "torchaudio",
    "tqdm",
    "pydantic",
    "wandb"
]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
train = "nanodrz.train:main"
step = "nanodrz.model:main"